{
  "version": 4,
  "terraform_version": "1.15.4",
  "serial": 31,
  "lineage": "a79d1ab7-0250-4acf-6f93-77b7409118f6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:route-table/rtb-0fd6e49a78037bdc9",
            "id": "rtb-0fd6e49a78037bdc9",
            "owner_id": "076124125546",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Description": "Private route table 1",
              "Name": "private1-rt"
            },
            "tags_all": {
              "Description": "Private route table 1",
              "Name": "private1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "rtb-0fd6e49a78037bdc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "private2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:route-table/rtb-0fc7f3a2776f5b2b7",
            "id": "rtb-0fc7f3a2776f5b2b7",
            "owner_id": "076124125546",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Description": "Private route table 2",
              "Name": "private2-rt"
            },
            "tags_all": {
              "Description": "Private route table 2",
              "Name": "private2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "rtb-0fc7f3a2776f5b2b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:route-table/rtb-0d7b3fa47d813cb33",
            "id": "rtb-0d7b3fa47d813cb33",
            "owner_id": "076124125546",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Description": "Public route table",
              "Name": "public-rt"
            },
            "tags_all": {
              "Description": "Public route table",
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "rtb-0d7b3fa47d813cb33",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:security-group/sg-0622e5687fee6ff09",
            "description": "Security group for web",
            "egress": [],
            "id": "sg-0622e5687fee6ff09",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg",
            "name_prefix": "",
            "owner_id": "076124125546",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "sg-0622e5687fee6ff09",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:security-group/sg-0fcf0c4106df4f334",
            "description": "Security group for app",
            "egress": [],
            "id": "sg-0fcf0c4106df4f334",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg",
            "name_prefix": "",
            "owner_id": "076124125546",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg"
            },
            "tags_all": {
              "Name": "app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "sg-0fcf0c4106df4f334",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:security-group/sg-0e432d3224a18da80",
            "description": "Security group for db",
            "egress": [],
            "id": "sg-0e432d3224a18da80",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "076124125546",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "sg-0e432d3224a18da80",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_foreach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:security-group/sg-099340cdb15d13c3f",
            "description": "Security group for app servers",
            "egress": [],
            "id": "sg-099340cdb15d13c3f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "app-sg-foreach",
            "name_prefix": "",
            "owner_id": "076124125546",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app-sg-foreach"
            },
            "tags_all": {
              "Name": "app-sg-foreach"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "sg-099340cdb15d13c3f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "cache",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:security-group/sg-06de6155433d3304f",
            "description": "Security group for cache servers",
            "egress": [],
            "id": "sg-06de6155433d3304f",
            "ingress": [],
            "name": "cache-sg-foreach",
            "name_prefix": "",
            "owner_id": "076124125546",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cache-sg-foreach"
            },
            "tags_all": {
              "Name": "cache-sg-foreach"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "sg-06de6155433d3304f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:security-group/sg-0c52e3207d8a10644",
            "description": "Security group for db servers",
            "egress": [],
            "id": "sg-0c52e3207d8a10644",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg-foreach",
            "name_prefix": "",
            "owner_id": "076124125546",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg-foreach"
            },
            "tags_all": {
              "Name": "db-sg-foreach"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "sg-0c52e3207d8a10644",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:security-group/sg-0d3b6436693c8bfc9",
            "description": "Security group for web servers",
            "egress": [],
            "id": "sg-0d3b6436693c8bfc9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-sg-foreach",
            "name_prefix": "",
            "owner_id": "076124125546",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-foreach"
            },
            "tags_all": {
              "Name": "web-sg-foreach"
            },
            "timeouts": null,
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "sg-0d3b6436693c8bfc9",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1038684780",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0622e5687fee6ff09",
            "security_group_rule_id": "sgr-0c0178c2f997b964e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-596130287",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0fcf0c4106df4f334",
            "security_group_rule_id": "sgr-0858590df0b5ff349",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1036716469",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0e432d3224a18da80",
            "security_group_rule_id": "sgr-042eb81448da02c96",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_foreach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "app",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-4187887975",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-099340cdb15d13c3f",
            "security_group_rule_id": "sgr-0d7d628ba847f431d",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_foreach",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "cache",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 6379,
            "id": "sgrule-3126549022",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-06de6155433d3304f",
            "security_group_rule_id": "sgr-0179c302faed275b0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 6379,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_foreach",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "db",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 3306,
            "id": "sgrule-1736018010",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c52e3207d8a10644",
            "security_group_rule_id": "sgr-09b9d469f75b8bcd9",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3306,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_foreach",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "web",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-569145710",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0d3b6436693c8bfc9",
            "security_group_rule_id": "sgr-0f8c8d1ad4d8dab43",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.sg_foreach",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:subnet/subnet-00ae4c7a9f60dbf6f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ae4c7a9f60dbf6f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076124125546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "subnet-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "subnet-00ae4c7a9f60dbf6f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:subnet/subnet-0a720a6ce40b43197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a720a6ce40b43197",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076124125546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-2",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "subnet-2",
              "Tier": "private"
            },
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "subnet-0a720a6ce40b43197",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_foreach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:subnet/subnet-0f11b6771b81ce68d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f11b6771b81ce68d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076124125546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-private1",
              "Tier": "standard"
            },
            "tags_all": {
              "Name": "subnet-private1",
              "Tier": "standard"
            },
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "subnet-0f11b6771b81ce68d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:subnet/subnet-044b6a226849c2261",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044b6a226849c2261",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "076124125546",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public",
              "Tier": "standard"
            },
            "tags_all": {
              "Name": "subnet-public",
              "Tier": "standard"
            },
            "vpc_id": "vpc-013668ae19d0a039c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "subnet-044b6a226849c2261",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:076124125546:vpc/vpc-013668ae19d0a039c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fa0e33c40596a793",
            "default_route_table_id": "rtb-06086e6047d2a38c5",
            "default_security_group_id": "sg-0bf6c334cef660796",
            "dhcp_options_id": "dopt-0200c4fdad2f1f246",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-013668ae19d0a039c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06086e6047d2a38c5",
            "owner_id": "076124125546",
            "region": "us-east-1",
            "tags": {
              "Name": "main-vpc"
            },
            "tags_all": {
              "Name": "main-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "076124125546",
            "id": "vpc-013668ae19d0a039c",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}